设置日志信息输出等级

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ll-form-making",
-  "description": "增加外部文件组件",
-  "version": "2.4.3",
+  "description": "密码修改样式优化",
+  "version": "2.4.5",
   "author": "lliiuu",
   "license": "MIT",
   "keywords": [
